# FastMirror

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cache_manager.py  config.py  docker-compose.yml  local_handler.py  main.py  proxy_handler.py  pyproject.toml  start.sh
.github/: copilot-instructions.md
core/: __init__.py  base_handler.py  cache_manager.py  hybrid_handler.py  local_handler.py  proxy_handler.py
custom/: custom_routes.py
utils/: __init__.py  cache_util.py  constants.py  encoding_util.py  http_util.py
